# AggieSBP-Backend

./: .gitignore  API_Documentation.md  GEMINI.md  README.md  database_config.md  env.example  gunicorn.conf.py  main.py  models.py  pyproject.toml  requirements.txt  run_api.py  start.sh  test.py  test_scalar.py  todo.md
.github/workflows/: apisec-scan.yml  ci.yml
collectors/: rmp_review_collector.py  utils.py
config/: cookies.json  mcp-postgres-config.json  vm-postgres-setup.md
data/raw/: courses.json  departments.json  gpa_data_test.json  gpa_fetch_progress.json  gpa_fetch_progress_concurrent.json  scraped_courses_final.json  scraped_departments_final.json
database/: base.py  summary.py
docs/: scalar-config.json  scalar-docs.html
models/: schema.py
pipelines/courses/: course_catalog_scraping.py  schemas.py  upsert_courses.py
pipelines/gpa/: anex_scraping.py  schemas.py  upsert_gpa_data.py
pipelines/professors/: .gitignore  schemas.py  scrapers.py  upsert.py  upsert_all.py  upsert_professors.py  upsert_reviews_and_summaries.py
pipelines/professors/hierarchical_summarization/: .gitignore  README.md  __init__.py  clustering.py  config.py  course_normalizer.py  embeddings.py  example_usage.py  pipeline.py  preprocess.py  process_all.py  summarizer.py
pipelines/professors/old/: schemas.py  summarizer.py  upsert_professors.py
pipelines/sections/: __init__.py  schemas.py  scraper.py  upsert.py  upsert_all.py
scripts/: aggiermp.service  check_professor_summaries.py  deploy_api.py  fetch_all_section_details.py  fetch_gpa_bulk.py  fetch_section_attributes_auth.py  howdy_api_sandbox.py  howdy_helpers.py  load_gpa_data.py  migrate_professor_summaries_schema.py  process_updated_today.py  run_collectors_utils.py  scrape_departments_auth.py  scrape_section_attributes_auth.py  stolen-api.py  update_common_attributes.py
src/aggiermp/: __init__.py  main.py
src/aggiermp/api/: main.py
src/aggiermp/collectors/: course_details_test.py  section_watcher.py  utils.py
src/aggiermp/core/: cache.py  config.py  notifications.py
src/aggiermp/database/: base.py  summary.py
src/aggiermp/models/: schema.py
tests/: conf_test.py  conftest.py  endpoints_test.py  test_api_endpoints.py
(+2 files in other folders)
