[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aggiermp"
version = "1.0.0"
description = "Texas A&M University Rate My Professor data collection and analysis system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "playwright>=1.40.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.12.11",
    "scalar-fastapi>=1.0.0",
    "gunicorn[uvicorn]>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/aggiermp"
Repository = "https://github.com/yourusername/aggiermp"
Issues = "https://github.com/yourusername/aggiermp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aggiermp"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
exclude = ["scripts/", "pipelines/professors/old/"]
explicit_package_bases = true
namespace_packages = true
follow_untyped_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"pipelines/*" = ["E402"]
"tests/*" = ["E402"]